# darjeeling

./: .gitignore  Cargo.toml  LICENSE  README.md  digits  model4054317257  model_distinguishingdummy_gen_2575007024.darj  model_dummy_gen_1287822053.darj  model_xor_2138025199.darj
src/: activation.rs  categorize.rs  dataframe.rs  error.rs  gen_input.rs  gen_node.rs  generation.rs  input.rs  layer.rs  lib.rs  link.rs  network.rs  neural_network.rs  node.rs  series.rs  tests.rs  types.rs  utils.rs
testing_data/: digits.txt
training_data/: train-digits.txt  xor.txt
