[package]
name = "darjeeling"
authors = ["Elo Colburn elocolburn@comcast.net"]
version = "0.2.3"
description = "Machine learning tools for rust. Currently comprising of categorization neural network model training"
edition = "2021"
license = "MIT"
rust-version = "1.66.0"
keywords = ["machine-learning", "categorization", "deep-learning", "neural-networks"]
exclude = [
    "training_data/"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
rand = "0.8.5"
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.93"
ascii_converter = "0.3.0"