[package]
name = "darjeeling"
authors = ["Azalea Colburn elocolburn@comcast.net"]
version = "0.3.3"
description = "Machine learning tools for rust. Currently comprising of categorization and generation neural network model training"
edition = "2021"
license = "MIT"
rust-version = "1.66.0"
keywords = ["machine-learning", "categorization", "deep-learning", "neural-networks", "generative"]
exclude = [
    "dataframe_plan.md",
    "sertest",
    "xor",
    "training_data/",
    "training_data/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.93"
ascii_converter = "0.3.0"
rayon = "1.7.0"